[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "linux-rtfm-macros"
publish = false
version = "0.0.0-alpha.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.30"
quote = "0.6.12"

[dependencies.rtfm-syntax]
git = "https://github.com/japaric/rtfm-syntax"
rev = "f1848362d2055397124349228a7d79856d3fbc0e"

[dependencies.syn]
version = "0.15.34"
features = ["extra-traits", "full"]
